--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-  <head> </head>
+  <head> <title>SheCodes!</title> </head>
   <body>
     <h1 id="message">The message is:</h1>
     <script src="index.js"></script>
